apps/base/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - image: ghcr.io/mealie-recipes/mealie:v3.20.1
        name: mealie
        resources:
          requests:
            memory: "600Mi"
            cpu: "5m"
          limits:
            memory: "1000Mi"
            cpu: "30m"
        ports:
          - name: c-p-mealie
            containerPort: 9000 
            protocol: TCP 
        volumeMounts:
          - mountPath: /app/data # per documentation
            name: mealie-pv # must match name of the volume
      volumes:
        - name: mealie-pv # name of the volume
          persistentVolumeClaim:
            claimName: mealie-pv # name of the persistentVolumeClaim
