apps/base/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  ports:
  - name: s-p-mealie
    port: 9000
    protocol: TCP
    targetPort: c-p-mealie
  selector:
    app: mealie  
  type: ClusterIP
