apps/base/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.nicklab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  name: s-p-mealie
